[project]
name = "async-timer"
dynamic = ["version"]
description = "The missing Python async timer."
authors = [
    {name = "Ilya O.", email = "vrghost@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["async", "timer"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Source = "https://github.com/VRGhost/async-timer"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-local-badge>=1.0.3",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.8",
    "asyncstdlib>=3.12",
    "pyright>=1.1.409",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
# Tags look like `v1.2.3` — strip the leading `v` for PEP 440 compliance.
tag_regex = '^v(?P<version>\d+\.\d+\.\d+.*)$'
# When building outside a tagged commit (CI on main, local dev), fall back
# to this so the build still succeeds.
fallback_version = "0.0.0.dev0"

[tool.pdm.build]
package-dir = "src"
includes = ["src/async_timer", "src/mock_async_timer"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C",
    "E",
    "F",
    "I",
    "W",
    "N",
    "C4",
    "T20",
    "PTH",
]
ignore = ["N802", "F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
    "E402",
]

[tool.ruff.lint.isort]
order-by-type = true
known-first-party = ["async_timer", "mock_async_timer"]
forced-separate = ["tests"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv", "docs"]
reportIncompatibleVariableOverride = false

[tool.pytest.ini_options]
addopts = "-v -l --color=yes --cov=async_timer --cov=mock_async_timer --cov-report term-missing --no-cov-on-fail --local-badge-output-dir docs/badges/"
testpaths = ["tests"]
timeout = 3
asyncio_mode = "auto"
